--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+services:
+  - mysql
+
+before_script:
+- mysql -u root --password=""  < ./resources/testdb.sql
+
 script:
 - BALLERINA_VERSION="${VERSION:-0.981.2-SNAPSHOT}"
 - echo -e "\033[36m${BALLERINA_VERSION}\033[m"
