--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # idea files
 .idea/*
 
+# .ballerina files
+.ballerina/
+
 # Compiled class file
 *.class
 
@@ -24,3 +27,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+target/
